// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should be mounted with no props 1`] = `
<div
  className="searchBar"
>
  <form
    className="ant-form ant-form-inline"
    onSubmit={[Function]}
  >
    <div
      className="ant-row ant-form-item"
      style={undefined}
    >
      <div
        className="ant-form-item-label"
        style={undefined}
      >
        <label
          className=""
          htmlFor={null}
          onClick={[Function]}
          title="Name"
        >
          Name
        </label>
      </div>
      <div
        className="ant-form-item-control-wrapper"
        style={undefined}
      >
        <div
          className="ant-form-item-control"
        >
          <span
            className="ant-form-item-children"
          >
            <span
              className="ant-input-affix-wrapper"
              style={undefined}
            >
              <span
                className="ant-input-prefix"
              >
                <i
                  aria-label="icon: search"
                  className="anticon anticon-search"
                  onClick={undefined}
                  style={
                    Object {
                      "color": "rgba(0,0,0,.25)",
                    }
                  }
                  tabIndex={undefined}
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="search"
                    fill="currentColor"
                    height="1em"
                    onClick={undefined}
                    style={undefined}
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </i>
              </span>
              <input
                className="ant-input"
                disabled={false}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Filter by name"
                style={null}
                type="text"
                value=""
              />
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`SearchBar should manage typing with only searchText  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchBar
    onChangeSearchText={[Function]}
    searchText="test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Form
        colon={true}
        hideRequiredMark={false}
        layout="inline"
        onSubmit={[Function]}
      >
        <FormItem
          hasFeedback={false}
          label="Name"
        >
          <Input
            disabled={false}
            onChange={[Function]}
            placeholder="Filter by name"
            prefix={
              <Icon
                style={
                  Object {
                    "color": "rgba(0,0,0,.25)",
                  }
                }
                type="search"
              />
            }
            suffix={
              <Icon
                id="search-text-delete"
                onClick={[Function]}
                type="close-circle"
              />
            }
            type="text"
            value="test"
          />
        </FormItem>
      </Form>,
      "className": "searchBar",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <FormItem
          hasFeedback={false}
          label="Name"
        >
          <Input
            disabled={false}
            onChange={[Function]}
            placeholder="Filter by name"
            prefix={
              <Icon
                style={
                  Object {
                    "color": "rgba(0,0,0,.25)",
                  }
                }
                type="search"
              />
            }
            suffix={
              <Icon
                id="search-text-delete"
                onClick={[Function]}
                type="close-circle"
              />
            }
            type="text"
            value="test"
          />
        </FormItem>,
        "colon": true,
        "hideRequiredMark": false,
        "layout": "inline",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Input
            disabled={false}
            onChange={[Function]}
            placeholder="Filter by name"
            prefix={
              <Icon
                style={
                  Object {
                    "color": "rgba(0,0,0,.25)",
                  }
                }
                type="search"
              />
            }
            suffix={
              <Icon
                id="search-text-delete"
                onClick={[Function]}
                type="close-circle"
              />
            }
            type="text"
            value="test"
          />,
          "hasFeedback": false,
          "label": "Name",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "onChange": [Function],
            "placeholder": "Filter by name",
            "prefix": <Icon
              style={
                Object {
                  "color": "rgba(0,0,0,.25)",
                }
              }
              type="search"
            />,
            "suffix": <Icon
              id="search-text-delete"
              onClick={[Function]}
              type="close-circle"
            />,
            "type": "text",
            "value": "test",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Form
          colon={true}
          hideRequiredMark={false}
          layout="inline"
          onSubmit={[Function]}
        >
          <FormItem
            hasFeedback={false}
            label="Name"
          >
            <Input
              disabled={false}
              onChange={[Function]}
              placeholder="Filter by name"
              prefix={
                <Icon
                  style={
                    Object {
                      "color": "rgba(0,0,0,.25)",
                    }
                  }
                  type="search"
                />
              }
              suffix={
                <Icon
                  id="search-text-delete"
                  onClick={[Function]}
                  type="close-circle"
                />
              }
              type="text"
              value="test"
            />
          </FormItem>
        </Form>,
        "className": "searchBar",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <FormItem
            hasFeedback={false}
            label="Name"
          >
            <Input
              disabled={false}
              onChange={[Function]}
              placeholder="Filter by name"
              prefix={
                <Icon
                  style={
                    Object {
                      "color": "rgba(0,0,0,.25)",
                    }
                  }
                  type="search"
                />
              }
              suffix={
                <Icon
                  id="search-text-delete"
                  onClick={[Function]}
                  type="close-circle"
                />
              }
              type="text"
              value="test"
            />
          </FormItem>,
          "colon": true,
          "hideRequiredMark": false,
          "layout": "inline",
          "onSubmit": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Input
              disabled={false}
              onChange={[Function]}
              placeholder="Filter by name"
              prefix={
                <Icon
                  style={
                    Object {
                      "color": "rgba(0,0,0,.25)",
                    }
                  }
                  type="search"
                />
              }
              suffix={
                <Icon
                  id="search-text-delete"
                  onClick={[Function]}
                  type="close-circle"
                />
              }
              type="text"
              value="test"
            />,
            "hasFeedback": false,
            "label": "Name",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "disabled": false,
              "onChange": [Function],
              "placeholder": "Filter by name",
              "prefix": <Icon
                style={
                  Object {
                    "color": "rgba(0,0,0,.25)",
                  }
                }
                type="search"
              />,
              "suffix": <Icon
                id="search-text-delete"
                onClick={[Function]}
                type="close-circle"
              />,
              "type": "text",
              "value": "test",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`SearchBar should render with all props 1`] = `
<div
  className="searchBar"
>
  <form
    className="ant-form ant-form-inline"
    onSubmit={[Function]}
  >
    <div
      className="ant-row ant-form-item"
      style={undefined}
    >
      <div
        className="ant-form-item-label"
        style={undefined}
      >
        <label
          className=""
          htmlFor={null}
          onClick={[Function]}
          title="Name"
        >
          Name
        </label>
      </div>
      <div
        className="ant-form-item-control-wrapper"
        style={undefined}
      >
        <div
          className="ant-form-item-control"
        >
          <span
            className="ant-form-item-children"
          >
            <span
              className="ant-input-affix-wrapper"
              style={undefined}
            >
              <span
                className="ant-input-prefix"
              >
                <i
                  aria-label="icon: search"
                  className="anticon anticon-search"
                  onClick={undefined}
                  style={
                    Object {
                      "color": "rgba(0,0,0,.25)",
                    }
                  }
                  tabIndex={undefined}
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="search"
                    fill="currentColor"
                    height="1em"
                    onClick={undefined}
                    style={undefined}
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0 0 11.6 0l43.6-43.5a8.2 8.2 0 0 0 0-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                    />
                  </svg>
                </i>
              </span>
              <input
                className="ant-input"
                disabled={false}
                onChange={[Function]}
                onKeyDown={[Function]}
                placeholder="Filter by name"
                style={null}
                type="text"
                value="test"
              />
              <span
                className="ant-input-suffix"
              >
                <i
                  aria-label="icon: close-circle"
                  className="anticon anticon-close-circle"
                  id="search-text-delete"
                  onClick={[Function]}
                  tabIndex={-1}
                >
                  <svg
                    aria-hidden="true"
                    className=""
                    data-icon="close-circle"
                    fill="currentColor"
                    height="1em"
                    onClick={undefined}
                    style={undefined}
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 0 0-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
                    />
                    <path
                      d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                    />
                  </svg>
                </i>
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </form>
</div>
`;
